--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,11 +15,27 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Manage NPM Dependencies
         uses: ./.github/actions/cache-node-dependencies
         with:
-          # Pasamos otros valores, en este caso para el backend
           app-name: "nest-app"
           working-directory: "./back-end-app"
+
       - name: Build
         run: npm run build
+
+      - name: Lint
+        run: npm run ci:lint # Ejecuta el comando npm run ci:lint de nuestro repositorio. Asegurarnos que tengamos un script en el package.json que ejecute el linter que estemos usando, en este caso ESlint
+
+      - name: Test
+        run: npm run ci:test # Ejecuta el comando npm run ci:test de nuestro repositorio. Asegurarnos que tengamos un script en el package.json que ejecute el runner de testing que estemos usando
+
+      - name: SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        with: # Muy importante esta parte, ya que le dice a SonarCloud que sólo analice el proyecto de front
+          projectBaseDir: back-end-app
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
