--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -12,6 +12,9 @@ jobs:
       run:
         working-directory: ./front-end-app
     runs-on: ubuntu-latest
+    permissions: # Añadimos permisos para que la acciones de login a github registry y build docker puedas leer y escribir en el registry de Github
+      packages: write
+      contents: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,3 +42,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONT }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3 # Utilizamos la acción de login de Docker del marketplace
+        with:
+          registry: ghcr.io # añadimos Github como registry de docker
+          username: ${{ github.actor }} # El usuario de Github
+          password: ${{ secrets.GITHUB_TOKEN }} # El token de Github que ya viene por defecto en los secrets
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v5 # Utilizamos la acción de build y push de docker del marketplace. Esto hace el docker build y el docker push por debajo
+        with:
+          context: ./front-end-app # El working directory
+          push: true
+          tags: ghcr.io/${{ github.actor }}/ci-cd-example-front:latest # Añadimos el tag de la imagen apuntando al registry de Github
