--- a/front-end-app/Dockerfile
+++ b/front-end-app/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:alpine
-LABEL org.opencontainers.image.source <tu_repo_de_github>
+LABEL org.opencontainers.image.source="https://github.com/ccbabcn/ci-cd-monorepo"
 COPY dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
